Add "commons-io:commons-io" dependency in "pom.xml" file Remove "transferTo(java.io.InputStream,java.io.OutputStream)" method from "org.apache.sshd.client.KeyStoreSslSshReport" class Update "beforeMethod()" and "testNotNull()" methods in "org.apache.sshd.client.KeyStoreSslSshReportTest" class Update "load(java.security.KeyStore,java.io.InputStream,char[])" and "main(java.lang.String[])" methods in "org.apache.sshd.client.KeyStoreSslSshReport" class